fix small overflow

--- a/sudoku.css
+++ b/sudoku.css
@@ -65,7 +65,7 @@ h3 {
 }
 
 .sudoku-container {
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .sudoku-grid {
